--- a/app/views/activities/_form.html.erb
+++ b/app/views/activities/_form.html.erb
@@ -1,17 +1,46 @@
-<%= form_with(model: activity) do |form| %>
-  <% if activity.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
+<%= form_with(model: activity, class: "flex flex-row justify-center") do |form| %>
+  <div class="w-lg">
+    <label class="block">
+      <span class="text-gray-700">Titulo</span>
+      <%= form.text_field :title, class:"form-input mt-1 block w-full border-2 border-black rounded px-1" %>
+    </label>
 
-      <ul>
-        <% activity.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+    <label class="block">
+      <span class="text-gray-700">Descrição</span>
+      <%= form.text_area :description, class:"form-input mt-1 block w-full border-2 border-black rounded px-1" %>
+    </label>
+
+    <label class="block">
+      <span class="text-gray-700">Data</span>
+      <%= form.date_field :date, class:"form-input mt-1 block w-full border-2 border-black rounded px-1" %>
+    </label>
+
+    <label class="block">
+      <span class="text-gray-700">Hora de inicio</span>
+      <%= form.time_field :start_time, class:"form-input mt-1 block w-full border-2 border-black rounded px-1" %>
+    </label>
+
+    <label class="block">
+      <span class="text-gray-700">Hora de termino</span>
+      <%= form.time_field :end_time, class:"form-input mt-1 block w-full border-2 border-black rounded px-1" %>
+    </label>
+
+
+    <% if activity.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(activity.errors.count, "error") %> prohibited this activity from being saved:</h2>
+
+        <ul>
+          <% activity.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="flex justify-center">
+      <%= form.submit nil, class: "bg-orange-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded my-2" %>
     </div>
-  <% end %>
 
-  <div>
-    <%= form.submit %>
   </div>
 <% end %>
