--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,9 +1,13 @@
-<h1>New activity</h1>
+<div class="flex flex-col items-center justify-center h-screen w-screen">
 
-<%= render "form", activity: @activity %>
+  <h1>Nova atividade</h1>
 
-<br>
+  <%= render "form", activity: @activity %>
 
-<div>
-  <%= link_to "Back to activities", activities_path %>
+  <br>
+
+  <div>
+    <%= link_to "Back to activities", activities_path %>
+  </div>
+
 </div>
