update crud activity

--- a/app/views/activities/_activity.html.erb
+++ b/app/views/activities/_activity.html.erb
@@ -1,2 +1,6 @@
-<div id="<%= dom_id activity %>">
+<div id="<%= dom_id activity %>" class="p-2 my-2 border-2 border-black rounded">
+    <h2 class="text-xl"><b><%= activity.title %></b></h2>
+    <p><%= activity.description %></p>
+    <p><%= activity.start_time.strftime('%H:%M') %> - <%= activity.end_time.strftime('%H:%M') %></p>
+    <p><%= activity.date.strftime('%d/%m/%y') %></p>
 </div>
