--- a/app/views/activities/edit.html.erb
+++ b/app/views/activities/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Editing activity</h1>
+<div class="flex flex-col items-center justify-center h-screen w-screen">
+  <h1 class="text-center mb-2 text-xl">Editando a atividade</h1>
 
-<%= render "form", activity: @activity %>
+  <%= render "form", activity: @activity %>
 
-<br>
+  <br>
 
-<div>
-  <%= link_to "Show this activity", @activity %> |
-  <%= link_to "Back to activities", activities_path %>
+  <div class="flex flex-row justify-center">
+    <%= link_to "Show this activity", @activity, class: "text-center bg-green-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded my-2 mx-2" %> 
+    <%= link_to "Back to activities", activities_path, class: "text-center bg-gray-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded my-2" %>
+  </div>
+
 </div>
