--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,14 +1,23 @@
-<p style="color: green"><%= notice %></p>
+<div class="flex flex-col items-center justify-center h-screen w-screen">
+  <p style="color: green"><%= notice %></p>
 
-<h1>Activities</h1>
+  <div class="flex flex-col justify-center">
+    <h1 class="text-center text-3xl mb-4">Atividades</h1>
 
-<div id="activities">
-  <% @activities.each do |activity| %>
-    <%= render activity %>
-    <p>
-      <%= link_to "Show this activity", activity %>
-    </p>
-  <% end %>
+  
+    <div id="activities">
+      <% @activities.each do |activity| %>
+        <div id="<%= dom_id activity %>" class="p-2 my-2 border-2 border-black rounded">
+          <h2 class="text-xl"><b><%= activity.title %></b></h2>
+          
+          <p>
+          <%= activity.start_time.strftime('%H:%M') %> - <%= activity.end_time.strftime('%H:%M') %>
+          </p>
+          <p class="text-end text-xs py-2 hover:underline"><%= link_to "Visualizar", activity %></p>
+      </div>
+      <% end %>
+    </div>
+
+    <%= link_to "Nova atividade", new_activity_path, class: "text-center bg-orange-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded my-2" %>
+  </div>
 </div>
-
-<%= link_to "New activity", new_activity_path %>
