--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,11 +1,15 @@
 <div class="flex flex-col items-center justify-center h-screen w-screen">
   <p style="color: green"><%= notice %></p>
 
-  <div class="flex flex-col justify-center">
-    <h1 class="text-center text-3xl mb-4">Atividades</h1>
+  <div class="flex flex-col justify-center min-w-[30%]">
+    <h1 class="text-center text-3xl mb-4 ">Atividades</h1>
+
+    <label for="data">Selecione uma data:</label>
+    <input type="date" id="data" name="data" value="<%= params[:date] || Date.today %>">
+
 
   
-    <div id="activities">
+    <div id="activities" class="py-2">
       <% @activities.each do |activity| %>
         <div id="<%= dom_id activity %>" class="p-2 my-2 border-2 border-black rounded">
           <h2 class="text-xl"><b><%= activity.title %></b></h2>
@@ -16,8 +20,18 @@
           <p class="text-end text-xs py-2 hover:underline"><%= link_to "Visualizar", activity %></p>
       </div>
       <% end %>
+      <% if @activities.length == 0 %>
+        <p class="text-center">Nenhuma atividade encontrada</p>
+      <% end %>
     </div>
 
     <%= link_to "Nova atividade", new_activity_path, class: "text-center bg-orange-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded my-2" %>
   </div>
 </div>
+
+<script>
+  document.getElementById('data').addEventListener('change', function() {
+    var data = this.value;
+    window.location.href = '/activities?date=' + data;
+  });
+</script>
